# panopticon

./: .gitignore  Cargo.toml  Makefile.toml  README.md
assets/: README.md
game/countries/GER/: country.yaml  focus_tree.yaml  research.yaml
game/map/: adjacency.yaml  provinces.yaml
game/units/: battalions.yaml
schemas/: country.schema.json  focus_tree.schema.json  province.schema.json  provinces.schema.json
src/: lib.rs  main.rs
src/content/: loader.rs  mod.rs  validator.rs
src/core/: adjacency.rs  components.rs  country.rs  data.rs  effects.rs  focus.rs  mod.rs  mod_tests.rs  province.rs  save.rs  sim.rs  simulation.rs  time.rs  types.rs  units.rs
src/engine/: camera.rs  mod.rs  province_view.rs  province_view.rs.new  ui_topbar.rs
tests/: content_loader_validator.rs
