[package]
name = "panopticon"
version = "0.1.0"
edition = "2021"
default-run = "panopticon"

[dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
ron = "0.8"
rand = "0.8"
strum = "0.26"
strum_macros = "0.26"
indexmap = "2"
petgraph = "0.6"
jsonschema = "0.16"
walkdir = "2"

bevy = { version = "0.14", optional = true, features = ["png"] }
bevy_egui = { version = "0.27", optional = true }
bevy_prototype_lyon = { version = "0.11", optional = true }
bevy-inspector-egui = { version = "0.23", optional = true }
bevy_asset_loader = { version = "0.20", optional = true }
notify = "6"

[dev-dependencies]
insta = "1"
approx = "0.5"
assert_cmd = "2"
predicates = "2"
tempfile = "3"

[features]
# Do not enable Bevy by default. Use `--features bevy` to build the graphical app.
default = []
bevy = [
	"dep:bevy",
	"dep:bevy_egui",
	"dep:bevy_prototype_lyon",
	"dep:bevy-inspector-egui",
	"dep:bevy_asset_loader",
]
