[package]
name = "panopticon"
version = "0.1.0"
edition = "2021"
default-run = "panopticon"

[dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
ron = "0.8"
rand = "0.8"
strum = "0.26"
strum_macros = "0.26"
indexmap = "2"
petgraph = "0.6"
jsonschema = "0.16"
walkdir = "2"

bevy = { version = "0.11", optional = true, features = ["dynamic_linking", "wayland"] }
bevy_egui = { version = "0.21", optional = true }
bevy_prototype_lyon = { version = "0.9", optional = true }
bevy-inspector-egui = { version = "0.19", optional = true }
bevy_asset_loader = { version = "0.17", optional = true }
notify = "6"

[dev-dependencies]
insta = "1"
approx = "0.5"
assert_cmd = "2"
predicates = "2"
tempfile = "3"

[features]
# Do not enable Bevy by default. Use `--features bevy` to build the graphical app.
default = []
bevy = [
    "dep:bevy",
    "dep:bevy_egui",
    "dep:bevy_prototype_lyon",
    "dep:bevy-inspector-egui",
    "dep:bevy_asset_loader",
]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["d3d11", "dxgi"] }

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
libudev-sys = "0.1"

# Configuration for different targets
[target.'cfg(windows)'.build-dependencies]
cmake = "0.1"

# Enable better optimizations for dependencies in release builds
[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1  # Better compile times for our code in development

# Make release builds faster to compile and smaller
[profile.release]
lto = "thin"
codegen-units = 1
strip = true  # Remove debug symbols

[package.metadata.bundle]
name = "Panopticon"
identifier = "com.github.asian-mario.panopticon"
version = "0.1.0"
resources = ["assets"]
copyright = "Copyright (c) 2025 asian-mario. All rights reserved."

# Windows-specific configurations
[package.metadata.bundle.windows]
timestamp = true
wix = false  # Don't use WiX installer
